[gd_scene load_steps=6 format=3 uid="uid://cbr5s3p6b4pp4"]

[ext_resource type="Script" uid="uid://c48daqvqi41cv" path="res://Entities/Enemy/Test Enemy/test_enemy.gd" id="1_0v3n6"]
[ext_resource type="Texture2D" uid="uid://btenhfnvcmhsj" path="res://Entities/Enemy/Quadtopus/Idle.png" id="2_ik4k5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ik4k5"]
radius = 18.0
height = 66.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oie2v"]
size = Vector2(23, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_truqn"]
size = Vector2(68, 15)

[node name="TestEnemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_0v3n6")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ik4k5")

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -5.5)
shape = SubResource("RectangleShape2D_oie2v")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_truqn")

[node name="RightFloorCast" type="RayCast2D" parent="."]
position = Vector2(19, 0)
target_position = Vector2(0, 24)

[node name="LeftFloorCast" type="RayCast2D" parent="."]
position = Vector2(-19, 0)
target_position = Vector2(0, 24)

[node name="Image2025-03-30164258789-removebg-preview" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("2_ik4k5")
